# person-follow-ai-reviewer-demo

./: .gitignore  README.md  pyproject.toml
ai_review_bot/: __init__.py  analyzer.py  cli.py  context.py  diff_parser.py  reporter.py  rules.py
docs/: interview_playbook.md  (+1 more)
sample_repo/: README.md  package.xml  requirements.txt  setup.py
sample_repo/config/: person_follow_all.yaml
sample_repo/docs/: D455_DEPTH_ACCURACY_TEST.md  DEPTH_SCENE_MATCHING_DESIGN.md  PERSON_FOLLOW_ACTION_FLOW_DESIGN.md  PERSON_FOLLOW_DUAL_MODE_ARCHITECTURE.md  PERSON_FOLLOW_SCENE_YOLO_CODE_ISSUES.md  PERSON_YOLO_HEAD_BOX_CONTROL_LOGIC_20260416.md  PHASE1_ASSOCIATION_DEBUG_GUIDE.md  REAL_ROBOT_ACCEPTANCE_CHECKLIST_2026-03-28.md  SUPERPOINT_SCENE_MATCHING_DESIGN.md  TARGET_LOCK_OFFLINE_EVAL.md  YOLO_GPU_DEPLOY.md
sample_repo/launch/: person_follow.launch.py  person_follow_all.launch.py
sample_repo/person_follow/: __init__.py  d455_depth_accuracy_test.py  follow_action_server_node.py  follow_fsm_langgraph_node.py  gesture_detector_node.py  person_association_node.py  person_follow_node.py  speak_pyttsx3_node.py
sample_repo/scene_servo/: __init__.py  feature_matcher.py  person_yolo_servo_node.py  scene_servo_node.py  scene_template_servo_node.py  scene_template_store.py  servo_estimator.py
sample_repo/scene_servo/tools/: build_template.py  capture_rgbd_pair.py  offline_pbvs_replay.py  quick_test.py
sample_repo/scripts/: export_trt_engine.sh  manual_base_cmd.sh  new_pbvs_eval_session.sh  run_person_yolo.sh  run_scene_template_chain.sh  run_scene_template_servo_logged.sh  stop_scene_template_chain.sh
sample_repo/tools/: handover_kpi_eval.py  target_lock_offline_eval.py  video_to_eval_json.py
(+5 files in other folders)
